# build

./: CMakeLists.txt  build.py  call_Uncrustify.sh  makeboost.py  makebotan.py  makedeb.sh  makeqt.py  makeutils.py  tagrepo.sh  uncrustify.cfg  which.py
debian/: combomb.desktop  menu
docker-2204/: Dockerfile  README.md  build-in-container.sh  run.sh
